Fix idf 5.4/5.5 build errors (#139)
* fix idf 5.4 build errors

* Remove errors from flac and opus

* close #126

---------

Co-authored-by: Jordi <jordiag@kth.se>

--- a/components/flac/CMakeLists.txt
+++ b/components/flac/CMakeLists.txt
@@ -23,4 +23,5 @@ idf_component_register(SRCS "${srcs}"
 
 set_source_files_properties(flac/src/libFLAC/bitwriter.c PROPERTIES COMPILE_FLAGS -Wno-error=format)
 set_source_files_properties(flac/src/libFLAC/bitreader.c PROPERTIES COMPILE_FLAGS -Wno-error=format)
+set_source_files_properties(flac/src/libFLAC/stream_decoder.c PROPERTIES COMPILE_FLAGS -Wno-incompatible-pointer-types)
 target_compile_definitions(${COMPONENT_TARGET} PRIVATE "-DHAVE_CONFIG_H")
